--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ plainwhite:
   search: true
   # analytics_id: G-HCKCGPDD5F
   dark_mode: true
-  portfolio_image: "assets/images/portfolio.png"
+  portfolio_image: "assets/images/portfolio.jpeg"
   html_lang: "KR"
   condensed_mobile:
     - page
