--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -4,22 +4,14 @@
   layout: list
   content:
     - layout: top-middle
-      title: 스마일게이트 메가포트
-      sub_title: |
-        코드 품질 향상 TF. 백엔드 개발자
+      title: Smilegate - 코드 품질 향상 TF
+      # sub_title: |     
       caption: 2023.06 - 현재
       quote: |
         2023.06 ~ 현재
         <br>
-        온라인 게임 서비스를 개발 및 서비스하는 기업에서 기술 지원 서비스 개발 및 코드 품질 향상을 위한 업무를 담당합니다.
+        백엔드 기술 지원 서비스 개발 및 코드 품질 향상을 위한 프로젝트입니다.
       description: |
-        * **설정 중앙화 시스템 구축**
-          * Central Dogma를 이용한 설정 중앙화 서비스 구축으로 정적 리소스 수정으로 인한 장애 0건으로 감소
-          * 장애 대응 시간 단축
-          * 이벤트 브로드캐스팅을 활용해 설정값 실시간 동기화 및 운영 자동화 구현
-          * UI 접근만 가능했던 설정 관리 기능들을 API로 제공하여 서비스 접근성 향상
-          * 비개발 직군의 업무 방식 지원을 위해 Excel/JSON과 properties 간 자동 변환 기능 추가
-
         * **공통 모듈 및 표준화된 개발 환경 구축**
           * 공통 모듈 개발 및 백엔드 서비스 템플릿화를 통한 프로젝트 표준 모델 생성
           * 토큰 인증, Feign 등 범용적으로 적용되는 표준 라이브러리 제공
@@ -31,32 +23,66 @@
           * 테스트 작성에 대한 허들을 낮추기 위해 Fixture 오픈소스를 활용, 테스트 프레임워크를 구현하여 읽기 편하고 의도가 명확한 테스트를 작성하도록 지원
           * unit, integration, E2E 코드 샘플 제공 및 가이드 작성
           * CI Template에 소나큐브, 테스트 분석 리포트, Issue 자동 추출을 추가하여 코드 품질 모니터링 자동화
-      tech_stack: Java17, Java21, Kotlin, SpringBoot, SpringCloud, MSA, MongoDB, Redis, LocalCache, MySQL, Docker, Nginx, Pinpoint, ELK
-      
+        
+        * **설정 중앙화 시스템 구축**
+          * Central Dogma를 이용한 설정 중앙화 서비스 구축으로 정적 리소스 수정으로 인한 장애 0건으로 감소
+          * 장애 대응 시간 단축
+          * 이벤트 브로드캐스팅을 활용해 설정값 실시간 동기화 및 운영 자동화 구현
+          * UI 접근만 가능했던 설정 관리 기능들을 API로 제공하여 서비스 접근성 향상
+          * 비개발 직군의 업무 방식 지원을 위해 Excel/JSON과 properties 간 자동 변환 기능 추가
+    
     - layout: top-middle
-      title: 스마일게이트 메가포트
-      sub_title: |
-        공통서비스개발팀. 백엔드 개발자
-      caption: 2022.07 - 2023.06
+      title: Smilegate - 게임 입점/전시 플랫폼 
+      caption: 2024.07 - 현재
       quote: |
-        2022.07 ~ 2023.06
+        2024.07 - 현재
         <br>
-        레거시 게임 전시 서비스의 아키텍처를 재설계하여 성능과 확장성을 개선하는 프로젝트를 담당했습니다.
+        모놀리식 시스템으로 구성되어 빌드 타임 및 강결합으로 인한 독립적 운영이 어려웠던 서비스를 개편하는 프로젝트입니다.
+        <br>멀티모듈 프로젝트와 MSA 기반 아키텍처를 설계하고 성능과 확장성을 개선하였습니다.
       description: |
         * **아키텍처 재설계 및 성능 개선**
-          * Event Driven Architecture와 CQRS 적용으로 강결합된 서비스간 책임 분리
-          * Read DB를 구축하여 조회 시간 30%로 단축
+          * Event Driven Architecture와 CQRS 적용으로 강결합된 서비스간 책임 분리 및 Read DB를 구축하여 조회 시간 30%로 단축
           * 모노 레포에서 공통, 퍼블리싱, 전시 멀티 모듈로 분리하여 빌드 시간 단축 및 모듈별 코드 경량화
           * 비즈니스 로직 기반 테스트 작성과 불필요한 코드 제거로 코드라인 50% 이상 감소, 마이그레이션 과정 이슈 최소화
 
-        * **모바일 개인화 전시 BFF 외부 연동 성능 최적화**
-          * Virtual Thread 도입으로 BFF 서비스의 1요청당 80개의 외부 연결(db/api) 성능 요건 달성
-          * platform thread 대비 TPS x10, 응답시간 30sec → 180ms, CPU useage 3% → 35%로 개선
-          * Hibernate TypeCasting과 MySQL의 묵시적 형변환으로 인한 슬로우 쿼리 이슈 해결
-          * 쿼리 실행 시간, throughput 개선 및 hibernate ddl 옵션 설정을 통한 재발 방지 계획 수립
+        * **게임 라이프사이클 관리 시스템 개발**
+          * 출시, 제재 등 상태 변경 처리를 위한 이벤트 기반 아키텍처 구현
+          * 어드민(정합성)과 전시(성능) 요구사항에 맞춘 이원화 데이터 구조 설계
+          * 카프카를 이용한 상품 이벤트 처리 구축
+            * 항상 최신 데이터를 처리하기 위한 Zero-payoad 방식의 메시지 설계
+            * 동일 상품 처리를 위한 메세지 키 구성
+            * 실패 처리를 위한 DLQ 적용 및 알림 적용
 
-        * **캐싱 최적화 및 성능 개선**
-          * Redis pipelining을 통한 벌크 푸시 기능 개선 - 다중 유저 푸시 발송시 조회 시간 1/100로 개선
-          * 캐시 key 재설계로 hit rate 증가 및 메모리 사이즈를 조정해 fullGC 방지
-          * Throughput 220% 증가, CPU Usage 50% 감소
-      tech_stack: Java, Spring Boot, JPA, Redis, MySQL, Event Driven Architecture, CQRS, Virtual Thread
+        * **다국어 처리 및 알림 시스템 통합**
+          * 다국어 모듈 연동으로 공지, 알림, 출시 이벤트 등에 중앙화된 다국어 관리 구현
+          * 비개발 직군이 직접 메시지 템플릿 관리할 수 있는 어드민 도구 개발
+          * 메시지 템플릿 변경 시 실시간 반영으로 운영 효율성 200% 향상
+
+      tech_stack: Java17, Spring Boot, JPA, Kafka, Redis, MySQL, MongoDB, Event Driven Architecture      
+    
+    - layout: top-middle
+      title: Smilegate - 모바일 개인화 추천 전시 개발
+      caption: 2022.07 - 2024.11
+      quote: |
+        2022.07 - 2024.11
+        <br>
+        모바일 게임 포털에서 사용자별 맞춤형 콘텐츠를 제공하기 위한 고성능 BFF 서비스로, 다양한 소스의 데이터를 실시간으로 통합하고 개인화된 추천 결과를 제공합니다.
+      description: |
+        * **고성능 BFF 시스템 설계 구현**
+          * 단일 요청당 80개의 외부 연결이 필요한 개인화 추천 API의 성능 요건 문제 해결
+          * Java 21 Virtual Thread와 병렬 처리 패턴 적용으로 블로킹 작업 효율화
+          * Platform Thread 대비 TPS 10배 향상, 응답시간 30초 → 180ms, CPU 사용률 최적화(3% → 35%)
+          * 내부 발표를 통해 Virtual Thread 적용 사례와 이점 공유하며 타 팀 도입 가이드 제공
+
+        * **개인화 추천 데이터 파이프라인 구축**
+          * 유저 활동 로그 적재 및 분석을 위한 하둡, 스파크 기반 데이터 파이프라인 설계
+          * 실시간 추천과 배치 분석을 위한 이원화된 데이터 처리 아키텍처 구현
+          * 메타 데이터와 유저 행동 데이터를 결합한 하이브리드 추천 알고리즘 적용
+
+        * **성능 이슈 트래킹 및 최적화**
+          * Hibernate TypeCasting과 MySQL 묵시적 형변환으로 인한 인덱스 미사용 문제 해결
+            * 쿼리 플랜 분석을 통한 성능 병목 지점 식별 및 재발 방지 DDL 옵션 설정
+          * Redis Pipelining 적용으로 다중 유저 푸시 발송 시 조회 시간 1/100로 단축
+            * 이벤트 기간 중 분당 20만건 푸시 처리 시 발생한 5초 이상 지연 문제 해결
+          * 캐시 구조 재설계 및 키 설계 최적화로 Hit Rate 개선 및 FullGC 방지
+      tech_stack: Java17, Java21, Spring Boot, JPA, Redis, MySQL, Hadoop, Spark, EhCache
