[docs] update work

--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -8,9 +8,7 @@
       # sub_title: |     
       caption: 2023.06 - 현재
       quote: |
-        2023.06 ~ 현재
-        <br>
-        백엔드 기술 지원 서비스 개발 및 코드 품질 향상을 위한 프로젝트입니다.
+        백엔드 기술 지원을 위한 공통 모듈과 다양한 라이브러리 개발 및 코드 품질 향상을 위한 TF 프로젝트입니다.
       description: |
         * **공통 모듈 및 표준화된 개발 환경 구축**
           * 공통 모듈 개발 및 백엔드 서비스 템플릿화를 통한 프로젝트 표준 모델 생성
@@ -35,8 +33,6 @@
       title: Smilegate - 게임 입점/전시 플랫폼 
       caption: 2024.07 - 현재
       quote: |
-        2024.07 - 현재
-        <br>
         모놀리식 시스템으로 구성되어 빌드 타임 및 강결합으로 인한 독립적 운영이 어려웠던 서비스를 개편하는 프로젝트입니다.
         <br>멀티모듈 프로젝트와 MSA 기반 아키텍처를 설계하고 성능과 확장성을 개선하였습니다.
       description: |
@@ -64,8 +60,6 @@
       title: Smilegate - 모바일 개인화 추천 전시 개발
       caption: 2022.07 - 2024.11
       quote: |
-        2022.07 - 2024.11
-        <br>
         모바일 게임 포털에서 사용자별 맞춤형 콘텐츠를 제공하기 위한 고성능 BFF 서비스로, 다양한 소스의 데이터를 실시간으로 통합하고 개인화된 추천 결과를 제공합니다.
       description: |
         * **고성능 BFF 시스템 설계 구현**
