--- a/_data/resume/skill.yml
+++ b/_data/resume/skill.yml
@@ -6,7 +6,7 @@
       title: BackEnd
       description: | # this will include new lines to allow paragraphs
         * Java17, Java21, Kotlin, SpringBoot, SpringCloud, MSA
-        * MongoDB, Redis, LocalCache, MySQL
+        * MySQL, MongoDB, Redis, LocalCache
         * Spring Data JPA, Mybatis, Querydsl
         * Junit5, Mockito, RestAssured, Spring REST Docs, Swagger
         * Gradle, Maven
@@ -16,12 +16,7 @@
       description: | # this will include new lines to allow paragraphs
         * Docker, Nginx, Pinpoint, ELK
         * CI/CD, Jenkins, Github Actions
-        * Kubernetes
-        * MySQL, MariaDB, MSSQL, Redis, MongoDB
-        * Argo CD, Github Action, Jenkins, Ansible
-        * Tomcat, Nginx, Resin
         * Linux(CentOS, Ubuntu)
-        * Docker, Docker-compose, Kubernetes, Kafka
     - layout: left
       left_area_vertical_align: top
       title: Tools
