[docs] update name

--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ repository: im-gnar/im-gnar.github.io
 version: 2
 
 # Personal info
-resume_name: 장유정
+resume_name: 장유정(Gnar)
 resume_title: Backend Developer
 resume_email: code.gnar@gmail.com
 website: https://im-gnar.github.io
