docs: update work

--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ about_profile_image: assets/images/gnar.jpeg
 about_content: |
   > **생산성을 높여, 더 큰 가치를 만듭니다.**
 
-  단순한 자동화를 넘어, 팀이 핵심 업무에 집중할 수 있는 환경을 만들기 위해 노력합니다. 반복적이고 비효율적인 업무를 정의하여 시스템화하고, 조직의 업무 흐름을 개선해왔습니다.
+  단순한 자동화를 넘어 팀이 핵심 업무에 집중할 수 있는 환경을 만들기 위해 노력합니다. 반복적이고 비효율적인 업무를 정의하여 시스템화하고, 조직의 업무 흐름을 개선해왔습니다.
   <br/><br/>
   > **꾸준히 배우며 더 나은 해결책을 찾습니다.**
   
@@ -87,7 +87,7 @@ about_content: |
   <br/><br/>
   > **지식을 나누며 함께 성장합니다.**
   
-  배운 지식을 나누는 것은 단순한 공유를 넘어, 팀과 조직의 발전에 기여하는 길이라고 생각합니다. 사내 스터디와 발표를 통해 새로운 기술과 인사이트를 함께 탐구해왔습니다.
+  배운 지식을 나누는 것은 단순한 공유를 넘어 팀과 조직의 발전에 기여하는 길이라고 생각합니다. 사내 스터디와 발표를 통해 새로운 기술과 인사이트를 함께 탐구해왔습니다.
 
 # -------------------------------------- END Resume Config  --------------------------------------
 
