--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -33,7 +33,7 @@
       title: Smilegate - 게임 입점/전시 플랫폼 
       caption: 2024.07 - 현재
       quote: |
-        모놀리식 시스템으로 구성되어 빌드 타임 및 강결합으로 인한 독립적 운영이 어려웠던 서비스를 개편하는 프로젝트입니다.
+        모놀리식 시스템으로 구성되어 빌드 타임이 길고 강결합으로 인해 독립적 운영이 어려웠던 서비스를 개편하는 프로젝트입니다.
         <br>멀티모듈 프로젝트와 MSA 기반 아키텍처를 설계하고 성능과 확장성을 개선하였습니다.
       description: |
         * **아키텍처 재설계 및 성능 개선**
@@ -43,7 +43,7 @@
 
         * **게임 라이프사이클 관리 시스템 개발**
           * 출시, 제재 등 상태 변경 처리를 위한 이벤트 기반 아키텍처 구현
-          * 어드민(정합성)과 전시(성능) 요구사항에 맞춘 이원화 데이터 구조 설계
+          * 퍼블리싱(정합성)과 전시(성능) 요구사항에 맞춘 이원화 데이터 구조 설계
           * 카프카를 이용한 상품 이벤트 처리 구축
             * 항상 최신 데이터를 처리하기 위한 Zero-payoad 방식의 메시지 설계
             * 동일 상품 처리를 위한 메세지 키 구성
