--- a/_data/resume/work-experience.yml
+++ b/_data/resume/work-experience.yml
@@ -10,13 +10,12 @@
       quote: |
         백엔드 기술 지원을 위한 공통 모듈과 다양한 라이브러리 개발 및 코드 품질 향상을 위한 TF 프로젝트입니다.
       description: |
-        * **공통 모듈 및 표준화된 개발 환경 구축**
-          * 공통 모듈 개발 및 백엔드 서비스 템플릿화를 통한 프로젝트 표준 모델 생성
+        * **공통 모듈 개발 및 표준화된 개발 환경 구축**
+          * 사내 표준 설정 변경으로 인한 영향도 최소화 및 스택 분리로 인한 프로젝트 파편화 감소
           * 토큰 인증, Feign 등 범용적으로 적용되는 표준 라이브러리 제공
           * 벌크 캐싱, Redis 기반 글로벌락, 커스텀 StreamUtils 등 다양한 기능 제공
-          * 사내 표준 설정 변경으로 인한 영향도 최소화 및 스택 분리로 인한 프로젝트 파편화 감소
         
-        * **테스트코드 도입 및 빌드 프로세스 추가 - 코드 품질 관리**
+        * **테스트 코드 도입 및 빌드 프로세스 추가 - 코드 품질 관리**
           * 필요성을 인지하고 있으나 도입 허들로 인해 미뤄져 왔던 테스트 코드 작성 문화를 추진
           * 테스트 작성에 대한 허들을 낮추기 위해 Fixture 오픈소스를 활용, 테스트 프레임워크를 구현하여 읽기 편하고 의도가 명확한 테스트를 작성하도록 지원
           * unit, integration, E2E 코드 샘플 제공 및 가이드 작성
@@ -24,16 +23,15 @@
         
         * **설정 중앙화 시스템 구축**
           * Central Dogma를 이용한 설정 중앙화 서비스 구축으로 정적 리소스 수정으로 인한 장애 0건으로 감소
-          * 장애 대응 시간 단축
-          * 이벤트 브로드캐스팅을 활용해 설정값 실시간 동기화 및 운영 자동화 구현
+          * 이벤트 브로드 캐스팅 기능을 활용한 실시간 동기화로 장애 대응 시간 단축 및 운영 자동화 구현
           * UI 접근만 가능했던 설정 관리 기능들을 API로 제공하여 서비스 접근성 향상
-          * 비개발 직군의 업무 방식 지원을 위해 Excel/JSON과 properties 간 자동 변환 기능 추가
+          * 비개발, 프론트엔드 직군을 위한 화이트 리스트, 번역 파일 변환, CDN 연동 등 기능 지원
     
     - layout: top-middle
       title: Smilegate - 게임 입점/전시 플랫폼 
       caption: 2024.07 - 현재
       quote: |
-        모놀리식 시스템으로 구성되어 빌드 타임이 길고 강결합으로 인해 독립적 운영이 어려웠던 서비스를 개편하는 프로젝트입니다.
+        모놀리식 시스템으로 구성되어 빌드 타임이 길고 공통 코드의 강결합으로 인해 독립적 운영이 어려웠던 서비스를 개편하는 프로젝트입니다.
         <br>멀티모듈 프로젝트와 MSA 기반 아키텍처를 설계하고 성능과 확장성을 개선하였습니다.
       description: |
         * **아키텍처 재설계 및 성능 개선**
@@ -47,9 +45,9 @@
           * 카프카를 이용한 상품 이벤트 처리 구축
             * 항상 최신 데이터를 처리하기 위한 Zero-payoad 방식의 메시지 설계
             * 동일 상품 처리를 위한 메세지 키 구성
-            * 실패 처리를 위한 DLQ 적용 및 알림 적용
+            * 실패 처리를 위한 DLQ 및 알림 적용
 
-        * **다국어 처리 및 알림 시스템 통합**
+        * **알림 다국어 처리 시스템 통합**
           * 다국어 모듈 연동으로 공지, 알림, 출시 이벤트 등에 중앙화된 다국어 관리 구현
           * 비개발 직군이 직접 메시지 템플릿 관리할 수 있는 어드민 도구 개발
           * 메시지 템플릿 변경 시 실시간 반영으로 운영 효율성 200% 향상
@@ -63,7 +61,7 @@
         모바일 게임 포털에서 사용자별 맞춤형 콘텐츠를 제공하기 위한 고성능 BFF 서비스로, 다양한 소스의 데이터를 실시간으로 통합하고 개인화된 추천 결과를 제공합니다.
       description: |
         * **고성능 BFF 시스템 설계 구현**
-          * 단일 요청당 80개의 외부 연결이 필요한 개인화 추천 API의 성능 요건 문제 해결
+          * 단일 요청당 80개의 외부 연결이 필요한 개인화 피드 API의 성능 요건 문제 해결
           * Java 21 Virtual Thread와 병렬 처리 패턴 적용으로 블로킹 작업 효율화
           * Platform Thread 대비 TPS 10배 향상, 응답시간 30초 → 180ms, CPU 사용률 최적화(3% → 35%)
           * 내부 발표를 통해 Virtual Thread 적용 사례와 이점 공유하며 타 팀 도입 가이드 제공
